# thermal-lilette

./: README.md
src/: CMakeLists.txt  anim_mesh.cc  anim_mesh.h  animation_loader_saver.cc  camera.cc  camera.h  config.h  gas_stuff.cc  gas_stuff.h  glfw_dispatch.cc  glfw_dispatch.h  gui.cc  gui.h  input_management.cc  input_management.h  main.cc  mesh.h  particle_sys.cc  particle_sys.h  prim_mesh.cc  prim_mesh.h  render_pass.cc  render_pass.h  stopwatch.cc  stopwatch.h  texture_to_render.cc  texture_to_render.h
src/compute/: adsrc.comp  advec.comp  bound.comp  diffu.comp  normt.comp  proj0.comp  proj1.comp  proj2.comp
src/old/: texture_to_render.cc  texture_to_render.h
src/shaders/: blending.vert  bone.vert  cylinder.vert  default.frag  default.vert  flat.frag  flat.vert  floor.frag  floor.tcs  floor.tes  floor.vert  instanced.frag  instanced.geom  instanced.vert  preview.frag  preview.vert  scroll_bar.frag  scroll_bar.vert  sky.frag  volume.frag  volume.vert  voxel.frag  voxel.vert
src/shaders/block/: block_default.frag  block_default.vert
